--- a/assets/sass/input.scss
+++ b/assets/sass/input.scss
@@ -1,5 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
+@media only screen and (max-width: 1440px) {
+    body {
+        font-size: 14px !important;
+
+        nav, main, footer, #banner>section {
+            padding: 1rem 10% !important;
+        } 
+
+        #nav-logo {
+            height: 3rem !important;
+        }       
+
+        #banner {
+            height: 90vh !important;
+            max-height: 90vh !important;
+        }
+
+        h1 {
+            font-size: 3rem !important;
+        }
+
+        #fim-banner {
+            margin-top: calc(90vh - 5rem) !important;
+        }
+    }
+}
+
 html {
     scroll-behavior: smooth;
 }
@@ -11,7 +38,7 @@ html {
     
     body {
         margin: 0;
-        font-size: 16px !important;
+        font-size: 16px;
         font-family: 'Raleway', Arial, Helvetica, sans-serif;
         color: #999;
 
@@ -20,7 +47,7 @@ html {
         #banner { z-index: 997; }
 
         nav, main, footer, #banner>section {
-            padding: 1rem 20% !important;
+            padding: 1rem 20%;
             //border: .1rem solid red;
         }
 
@@ -164,10 +191,9 @@ html {
 
         .btn {
             border-radius: 50rem;
-            padding: 1rem 2.5rem;
+            padding: 1rem 2rem;
             outline: none;
             border: 0;
-            font-size: 1.2rem !important;
             font-weight: 600;
             display: inline-flex;
             align-items: center;
