--- a/assets/sass/input.scss
+++ b/assets/sass/input.scss
@@ -4,8 +4,10 @@ $branco: #fff;
 $preto: #252525;
 $cinza: #6e6e6e;
 $cinza-claro: #a5a5a5;
+$cinza-claro-filtro: #f5f5f5;
 $azul: #0045A0;
 $verde: #B3DE00;
+$verde-claro: #faffe3;
 
 @media only screen and (max-width: 1440px) {
     body {
@@ -71,9 +73,17 @@ body {
         margin: 0 !important;
     }
 
+    ul {
+        padding-left: 2rem;
+
+        li {
+            margin-bottom: 1rem;
+        }
+    }
+
     li, p {
         font-size: 1rem;
-        line-height: 1.5rem !important;
+        line-height: 2rem !important;
     }
 
     nav {
@@ -115,7 +125,7 @@ body {
 
         h2 {
             color: $verde;
-            font-size: 2rem;
+            font-size: 2.5rem;
         }
 
         h3 {
@@ -124,23 +134,22 @@ body {
         }
 
         section {
-            padding-top: 5rem;
-            padding-bottom: 5rem;
+            padding-top: 7.5rem;
+            padding-bottom: 7.5rem;
         }
 
         #to-top {
             position: fixed;
             bottom: 2rem;
             right: 2rem;
-            background-color: $branco;
             border-radius: 50%;
-            color: $azul;
+            color: $verde;
         }
 
         #banner {
             width: 100%;
-            height: 80vh;
-            max-height: 80vh;
+            height: 100vh;
+            max-height: 100vh;
             overflow: hidden;
             position: relative;
             background-image: url('../../src/img/agro-e-solar-banner-paineis-solares-3.jpg');
@@ -164,6 +173,7 @@ body {
 
                     p {
                         margin: 0 15%;
+                        line-height: 1.5rem !important;
                     }
                 }
                 
@@ -208,7 +218,18 @@ body {
                 margin: 0 !important;
             }
         }
+    }
+}
 
+#sctn-cnt {
+    p {
+        display: flex;
+        align-items: center;
+
+        svg {
+            margin-right: 1rem !important;
+            color: $verde;
+        }
     }
 }
 
@@ -234,23 +255,53 @@ body {
     }
 }
 
-.btn-3 {
-    background-color: $branco;
-    color: $azul;
-}
-
 .col-100 {
     width: 100%;
 }
 
 .col-70 {
-    width: 69%;
+    width: 68%;
+}
+
+.col-60 {
+    width: 58%;
 }
 
 .col-50 {
-    width: 49%;
+    width: 48%;
+}
+
+.col-40 {
+    width: 38%;
 }
 
 .col-30 {
-    width: 29%;
+    width: 28%;
+}
+
+.btn-verde {
+    background-color: $verde;
+    color: $branco;
+}
+
+.btn-azul {
+    background-color: $azul;
+    color: $branco;
+}
+
+.btn-branco {
+    background-color: $branco;
+    color: $azul;
+}
+
+.bg-verde {
+    background-color: $verde-claro !important;
+}
+
+.bg-cinza {
+    background-color: $cinza-claro-filtro !important;
+}
+
+.bg-preto {
+    background-color: $preto !important;
 }
