--- a/assets/sass/input.scss
+++ b/assets/sass/input.scss
@@ -73,14 +73,6 @@ body {
         margin: 0 !important;
     }
 
-    ul {
-        padding-left: 2rem;
-
-        li {
-            margin-bottom: 1rem;
-        }
-    }
-
     li, p {
         font-size: 1rem;
         line-height: 2rem !important;
@@ -154,7 +146,7 @@ body {
             position: relative;
             background-image: url('../../src/img/agro-e-solar-banner-paineis-solares-3.jpg');
             background-size: cover;
-            background-position: center -10rem;
+            background-position: center bottom;
             //background-attachment: fixed;
 
             >div {
@@ -191,7 +183,7 @@ body {
 
     section {
         width: 100%;
-        padding: 1rem 20%;
+        padding: 1rem 15%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -205,7 +197,6 @@ body {
     }
 
     footer {
-        margin-top: 5rem;
         text-align: center;
         background-color: $preto;
         
@@ -221,14 +212,40 @@ body {
     }
 }
 
-#sctn-cnt {
-    p {
-        display: flex;
-        align-items: center;
+#sctn-agr {
+    //background-image: url('../../src/img/agro.jpg');
+    background-position: center center;
+    background-size: cover;
+}
 
-        svg {
-            margin-right: 1rem !important;
-            color: $verde;
+#sctn-emp,
+#sctn-res {
+    img {
+        height: 100%;
+    }
+}
+
+#sctn-grd {
+    &>div {
+        .col-50 {
+            p {
+                margin-bottom: 0rem;
+            } 
+        }
+    }
+}
+
+#sctn-cnt {
+    div {
+        p {
+            display: flex;
+            align-items: center;
+            margin-bottom: 1rem !important;
+    
+            svg {
+                margin-right: 1rem !important;
+                color: $verde;
+            }
         }
     }
 }
@@ -304,4 +321,10 @@ body {
 
 .bg-preto {
     background-color: $preto !important;
+}
+
+.img-padrao {
+    width: 100% !important;
+    border-radius: .5rem !important;
+    object-fit: cover;
 }
