--- a/assets/sass/output.css
+++ b/assets/sass/output.css
@@ -63,12 +63,6 @@ body a, body button, body svg {
   cursor: pointer;
   margin: 0 !important;
 }
-body ul {
-  padding-left: 2rem;
-}
-body ul li {
-  margin-bottom: 1rem;
-}
 body li, body p {
   font-size: 1rem;
   line-height: 2rem !important;
@@ -130,7 +124,7 @@ body main #banner {
   position: relative;
   background-image: url("../../src/img/agro-e-solar-banner-paineis-solares-3.jpg");
   background-size: cover;
-  background-position: center -10rem;
+  background-position: center bottom;
 }
 body main #banner > div {
   margin: auto;
@@ -159,7 +153,7 @@ body main #banner > div #pelicula {
 }
 body section {
   width: 100%;
-  padding: 1rem 20%;
+  padding: 1rem 15%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -170,7 +164,6 @@ body section > div {
   justify-content: space-between;
 }
 body footer {
-  margin-top: 5rem;
   text-align: center;
   background-color: #252525;
 }
@@ -183,11 +176,26 @@ body footer section h5 {
   margin: 0 !important;
 }
 
-#sctn-cnt p {
+#sctn-agr {
+  background-position: center center;
+  background-size: cover;
+}
+
+#sctn-emp img,
+#sctn-res img {
+  height: 100%;
+}
+
+#sctn-grd > div .col-50 p {
+  margin-bottom: 0rem;
+}
+
+#sctn-cnt div p {
   display: flex;
   align-items: center;
+  margin-bottom: 1rem !important;
 }
-#sctn-cnt p svg {
+#sctn-cnt div p svg {
   margin-right: 1rem !important;
   color: #B3DE00;
 }
@@ -259,6 +267,12 @@ body footer section h5 {
 
 .bg-preto {
   background-color: #252525 !important;
+}
+
+.img-padrao {
+  width: 100% !important;
+  border-radius: 0.5rem !important;
+  object-fit: cover;
 }
 
 /*# sourceMappingURL=output.css.map */
