--- a/assets/sass/input.scss
+++ b/assets/sass/input.scss
@@ -75,7 +75,7 @@ body {
 
     li, p {
         font-size: 1rem;
-        line-height: 2rem !important;
+        line-height: 1.5rem !important;
     }
 
     nav {
@@ -218,6 +218,20 @@ body {
     background-size: cover;
 }
 
+#sctn-sld {
+    div {
+        .slideshow-container {
+            margin: 0 auto;
+        }
+    }
+}
+
+#sctn-esp {
+    p {
+        font-size: .8rem;
+    }
+}
+
 #sctn-emp,
 #sctn-res {
     img {
@@ -225,12 +239,38 @@ body {
     }
 }
 
-#sctn-grd {
-    &>div {
-        .col-50 {
-            p {
-                margin-bottom: 0rem;
-            } 
+#sctn-neg {}
+
+#sctn-fot {
+    table {
+        width: 100%;
+        border-collapse: collapse;
+
+        thead {
+            tr {
+                background-color: $verde;
+                color: $preto !important;
+                
+                .titulo {
+                    padding: 1rem 0;
+                    text-align: center;
+                }
+            }
+        }
+        
+        tbody {
+            td {
+                border: .1rem solid $cinza-claro;
+                strong {
+                    color: $branco;
+                }
+            }
+        }
+
+        td {
+            padding: .5rem;
+            width: 25%;
+
         }
     }
 }
@@ -296,6 +336,10 @@ body {
     width: 28%;
 }
 
+.col-20 {
+    width: 18%;
+}
+
 .btn-verde {
     background-color: $verde;
     color: $branco;
@@ -327,4 +371,110 @@ body {
     width: 100% !important;
     border-radius: .5rem !important;
     object-fit: cover;
+}
+
+/* Slideshow container */
+.slideshow-container {
+    position: relative;
+    margin: auto;
+    margin-top: 3rem !important;
+
+    /* Hide the images by default */
+    .mySlides {
+        display: none;
+        height: 40rem;
+        transition: 0.6s ease;
+
+        /* Number text (1/3 etc) */
+        .numbertext {
+            color: #f2f2f2;
+            font-size: 12px;
+            padding: 8px 12px;
+            position: absolute;
+            top: 0;
+        }
+
+        img {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+            border-radius: .5rem;
+        }
+
+        .text {
+            height: 3rem;
+            color: #f2f2f2;
+            background-color: rgba($preto, .8);
+            font-size: 1rem;
+            line-height: 1rem;
+            padding: 1rem 0;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+        }
+    }
+
+    /* Next & previous buttons */
+    .prev, .next {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        width: auto;
+        margin-top: -.2rem;
+        padding: 1rem;
+        color: white;
+        font-weight: bold;
+        font-size: 2rem;
+        transition: 0.6s ease;
+        border-radius: 0 .5rem .5rem 0;
+        user-select: none;
+    }
+    
+    /* Position the "next button" to the right */
+    .next {
+        right: 0;
+        border-radius: .5rem 0 0 .5rem;
+    }
+    
+    /* On hover, add a black background color with a little bit see-through */
+    .prev:hover, .next:hover {
+        background-color: rgba(0,0,0,0.8);
+    }
+}
+
+/* The dots/bullets/indicators */
+.dots {
+    margin-top: 1rem;
+    justify-content: center;
+
+    .dot {
+        cursor: pointer;
+        height: .5rem;
+        width: .5rem;
+        margin: 0 1rem;
+        background-color: #bbb;
+        border-radius: 50%;
+        display: inline-block;
+        transition: background-color 0.6s ease;
+
+        &:hover {
+            background-color: $verde;
+        }
+    }
+}
+
+.active {
+    background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
 }
