--- a/assets/sass/output.css
+++ b/assets/sass/output.css
@@ -65,7 +65,7 @@ body a, body button, body svg {
 }
 body li, body p {
   font-size: 1rem;
-  line-height: 2rem !important;
+  line-height: 1.5rem !important;
 }
 body nav {
   position: absolute;
@@ -181,13 +181,40 @@ body footer section h5 {
   background-size: cover;
 }
 
+#sctn-sld div .slideshow-container {
+  margin: 0 auto;
+}
+
+#sctn-esp p {
+  font-size: 0.8rem;
+}
+
 #sctn-emp img,
 #sctn-res img {
   height: 100%;
 }
 
-#sctn-grd > div .col-50 p {
-  margin-bottom: 0rem;
+#sctn-fot table {
+  width: 100%;
+  border-collapse: collapse;
+}
+#sctn-fot table thead tr {
+  background-color: #B3DE00;
+  color: #252525 !important;
+}
+#sctn-fot table thead tr .titulo {
+  padding: 1rem 0;
+  text-align: center;
+}
+#sctn-fot table tbody td {
+  border: 0.1rem solid #a5a5a5;
+}
+#sctn-fot table tbody td strong {
+  color: #fff;
+}
+#sctn-fot table td {
+  padding: 0.5rem;
+  width: 25%;
 }
 
 #sctn-cnt div p {
@@ -242,6 +269,10 @@ body footer section h5 {
   width: 28%;
 }
 
+.col-20 {
+  width: 18%;
+}
+
 .btn-verde {
   background-color: #B3DE00;
   color: #fff;
@@ -273,6 +304,107 @@ body footer section h5 {
   width: 100% !important;
   border-radius: 0.5rem !important;
   object-fit: cover;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  position: relative;
+  margin: auto;
+  margin-top: 3rem !important;
+  /* Hide the images by default */
+  /* Next & previous buttons */
+  /* Position the "next button" to the right */
+  /* On hover, add a black background color with a little bit see-through */
+}
+.slideshow-container .mySlides {
+  display: none;
+  height: 40rem;
+  transition: 0.6s ease;
+  /* Number text (1/3 etc) */
+}
+.slideshow-container .mySlides .numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+.slideshow-container .mySlides img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 0.5rem;
+}
+.slideshow-container .mySlides .text {
+  height: 3rem;
+  color: #f2f2f2;
+  background-color: rgba(37, 37, 37, 0.8);
+  font-size: 1rem;
+  line-height: 1rem;
+  padding: 1rem 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
+.slideshow-container .prev, .slideshow-container .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -0.2rem;
+  padding: 1rem;
+  color: white;
+  font-weight: bold;
+  font-size: 2rem;
+  transition: 0.6s ease;
+  border-radius: 0 0.5rem 0.5rem 0;
+  user-select: none;
+}
+.slideshow-container .next {
+  right: 0;
+  border-radius: 0.5rem 0 0 0.5rem;
+}
+.slideshow-container .prev:hover, .slideshow-container .next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* The dots/bullets/indicators */
+.dots {
+  margin-top: 1rem;
+  justify-content: center;
+}
+.dots .dot {
+  cursor: pointer;
+  height: 0.5rem;
+  width: 0.5rem;
+  margin: 0 1rem;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+.dots .dot:hover {
+  background-color: #B3DE00;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /*# sourceMappingURL=output.css.map */
