--- a/assets/sass/input.scss
+++ b/assets/sass/input.scss
@@ -26,92 +26,20 @@ $verde-claro: #faffe3;
             max-height: 90vh !important;
         }
 
-        h1 {
-            font-size: 3rem !important;
-        }
-
         #fim-banner {
             margin-top: calc(90vh - 5rem) !important;
         }
     }
 }
 
-html {
-    scroll-behavior: smooth;
-}
-
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box !important;
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
 }
 
 body {
-    margin: 0;
-    font-size: 14px;
-    color: $cinza-claro;
-    background-color: $branco;
-
-    nav { z-index: 999; }
-    #to-top { z-index: 998; }
-    #banner { z-index: 997; }    
-    #banner #texto { z-index: 997; }
-    #banner #pelicula { z-index: 996; }
-
-    h1, h2, h3, h4, h5, h6 {
-        margin-bottom: 1rem !important;
-    }
-
-    h1 {
-        font-size: 4rem;
-    }
-
-    a, button, svg {
-        text-decoration: none;
-        cursor: pointer;
-        margin: 0 !important;
-    }
-
-    li, p {
-        font-size: 1rem;
-        line-height: 1.5rem !important;
-    }
-
-    nav {
-        position: absolute;
-        width: 100%;
-        align-items: center;
-        min-height: 5rem !important;
-
-        a {
-            color: $branco !important;
-        }
-
-        #nav-logo {
-            height: 3.5rem;
-            //filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, .5));
-        }
-        
-        #nav-menu {
-            display: flex;
-            align-items: center;
-
-            li {
-                display: inline;
-                font-size: .8rem;
-                margin-left: 3rem;
-                padding: .5rem 0;
-                border-bottom: .2rem solid rgba(0, 0, 0, 0);
-                transition: .2s;
-
-                &:hover {
-                    border-bottom: .2rem solid $verde;
-                }
-            }
-        }
-    }
-
     main {
         min-height: 100vh;
 
@@ -125,11 +53,6 @@ body {
             font-size: 1.5rem;
         }
 
-        section {
-            padding-top: 7.5rem;
-            padding-bottom: 7.5rem;
-        }
-
         #to-top {
             position: fixed;
             bottom: 2rem;
@@ -137,18 +60,9 @@ body {
             border-radius: 50%;
             color: $verde;
         }
-
         #banner {
-            width: 100%;
-            height: 100vh;
-            max-height: 100vh;
-            overflow: hidden;
-            position: relative;
             background-image: url('../../src/img/agro-e-solar-banner-paineis-solares-3.jpg');
-            background-size: cover;
-            background-position: center bottom;
-            //background-attachment: fixed;
-
+            
             >div {
                 margin: auto;
 
@@ -178,21 +92,6 @@ body {
                     background: linear-gradient(rgba($azul, 0.7) 0%, rgba($azul, 0.2) 80%);
                 }
             }
-        }
-    }
-
-    section {
-        width: 100%;
-        padding: 1rem 15%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        //border: .1rem solid red;
-
-        >div {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
         }
     }
 
@@ -286,28 +185,6 @@ body {
                 margin-right: 1rem !important;
                 color: $verde;
             }
-        }
-    }
-}
-
-.btn {
-    border-radius: 50rem;
-    padding: 1rem 2rem;
-    outline: none;
-    border: 0;
-    font-weight: 600;
-    display: inline-flex;
-    align-items: center;
-    transition: .2s;
-
-    svg {
-        margin-left: .5rem !important;
-        transition: .2s;
-    }
-
-    &:hover {
-        svg {
-            margin-left: 1rem !important;
         }
     }
 }
