--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -14,6 +14,10 @@ h1 {
     @apply font-light text-7xl
 }
 
+h2 {
+    @apply text-verde text-5xl
+}
+
 h1, h2, h3, h4, h5, h6 {
     @apply mb-6
 }
@@ -23,7 +27,7 @@ a, svg, button {
 }
 
 li, p {
-    @apply text-base leading-6
+    @apply text-base leading-6 
 }
 
 .nav-link {
@@ -31,11 +35,11 @@ li, p {
 }
 
 .sessao {
-    @apply p-0 w-full flex-col flex
+    @apply py-32 px-0 w-full flex-col flex
 }
 
 .conteudo {
-    @apply grid gap-16 xl:w-2/3
+    @apply grid gap-16 mx-auto xl:w-2/3
 }
 
 .coluna {
@@ -44,4 +48,12 @@ li, p {
 
 .btn {
     @apply text-base outline-none border-0 font-semibold inline-flex items-center transition-all py-4 px-8 rounded-full hover:px-10
+}
+
+.dot {
+    @apply cursor-pointer h-4 w-4 my-0 mx-4 bg-cinza-claro rounded-full inline-block transition-all hover:bg-verde
+}
+
+.active {
+    @apply bg-preto
 }
