--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -1,4 +1,6 @@
-*, ::before, ::after {
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
+*, ::before, ::after{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -52,7 +54,7 @@
   --tw-contain-style:  ;
 }
 
-::backdrop {
+::backdrop{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -554,495 +556,101 @@ video {
   display: none;
 }
 
-.container {
-  width: 100%;
+*{
+  margin: 0;
+  box-sizing: border-box;
+  padding: 0;
 }
 
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
-}
-
-.fixed {
-  position: fixed;
-}
-
-.absolute {
-  position: absolute;
-}
-
-.relative {
-  position: relative;
-}
-
-.bottom-0 {
-  bottom: 0;
-}
-
-.bottom-16 {
-  bottom: 4rem;
-}
-
-.left-0 {
-  left: 0;
-}
-
-.right-0 {
-  right: 0;
-}
-
-.right-16 {
-  right: 4rem;
-}
-
-.top-0 {
-  top: 0;
-}
-
-.top-1\/2 {
-  top: 50%;
-}
-
-.z-10 {
-  z-index: 10;
-}
-
-.z-20 {
-  z-index: 20;
-}
-
-.z-40 {
-  z-index: 40;
-}
-
-.z-50 {
-  z-index: 50;
-}
-
-.col-span-1 {
-  grid-column: span 1 / span 1;
-}
-
-.col-span-2 {
-  grid-column: span 2 / span 2;
-}
-
-.col-span-3 {
-  grid-column: span 3 / span 3;
-}
-
-.-m-1 {
-  margin: -0.25rem;
-}
-
-.m-auto {
-  margin: auto;
-}
-
-.mb-16 {
-  margin-bottom: 4rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
-.ml-2 {
-  margin-left: 0.5rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
-}
-
-.flex {
-  display: flex;
-}
-
-.table {
-  display: table;
-}
-
-.grid {
-  display: grid;
-}
-
-.hidden {
-  display: none;
-}
-
-.h-12 {
-  height: 3rem;
-}
-
-.h-14 {
-  height: 3.5rem;
-}
-
-.h-16 {
-  height: 4rem;
-}
-
-.h-160 {
-  height: 40rem;
-}
-
-.h-dvh {
-  height: 100dvh;
-}
-
-.h-fit {
-  height: -moz-fit-content;
-  height: fit-content;
-}
-
-.h-full {
-  height: 100%;
-}
-
-.max-h-dvh {
-  max-height: 100dvh;
-}
-
-.min-h-20 {
-  min-height: 5rem;
-}
-
-.w-16 {
-  width: 4rem;
-}
-
-.w-4\/5 {
-  width: 80%;
-}
-
-.w-auto {
-  width: auto;
-}
-
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
-.w-full {
-  width: 100%;
-}
-
-@keyframes fadeInRight {
-  0% {
-    transform: translateX(100%);
-    opacity: 0;
-  }
-
-  50% {
-    opacity: 0;
-  }
-
-  100% {
-    transform: translateX(0%);
-    opacity: 1;
-  }
-}
-
-.animate-fade-in-right {
-  animation: fadeInRight 2s ease-in-out;
-}
-
-.cursor-pointer {
-  cursor: pointer;
-}
-
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.grid-cols-5 {
-  grid-template-columns: repeat(5, minmax(0, 1fr));
-}
-
-.items-center {
-  align-items: center;
-}
-
-.justify-end {
-  justify-content: flex-end;
-}
-
-.justify-center {
-  justify-content: center;
-}
-
-.gap-y-10 {
-  row-gap: 2.5rem;
-}
-
-.overflow-hidden {
-  overflow: hidden;
-}
-
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
-.border-b-2 {
-  border-bottom-width: 2px;
-}
-
-.border-branco {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.bg-azul {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 69 160 / var(--tw-bg-opacity));
-}
-
-.bg-cinza {
-  --tw-bg-opacity: 1;
-  background-color: rgb(110 110 110 / var(--tw-bg-opacity));
-}
-
-.bg-cinza-claro-2 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 249 249 / var(--tw-bg-opacity));
-}
-
-.bg-preto {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 37 37 / var(--tw-bg-opacity));
-}
-
-.bg-gradient-to-b {
-  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-}
-
-.from-\[rgba\(0\2c 69\2c 160\2c 0\.8\)\] {
-  --tw-gradient-from: rgba(0,69,160,0.8) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgba(0, 69, 160, 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.to-\[rgba\(0\2c 69\2c 160\2c 0\.2\)\] {
-  --tw-gradient-to: rgba(0,69,160,0.2) var(--tw-gradient-to-position);
-}
-
-.bg-cover {
-  background-size: cover;
-}
-
-.bg-top {
-  background-position: top;
-}
-
-.object-cover {
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.p-4 {
-  padding: 1rem;
-}
-
-.px-0 {
-  padding-left: 0;
-  padding-right: 0;
-}
-
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.font-bold {
-  font-weight: 700;
-}
-
-.font-extralight {
-  font-weight: 200;
-}
-
-.font-semibold {
-  font-weight: 600;
-}
-
-.leading-4 {
-  line-height: 1rem;
-}
-
-.text-branco {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-verde {
-  --tw-text-opacity: 1;
-  color: rgb(179 222 0 / var(--tw-text-opacity));
-}
-
-.transition-all {
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.delay-75 {
-  transition-delay: 75ms;
-}
-
-.delay-200 {
-  transition-delay: 200ms;
-}
-
-.delay-150 {
-  transition-delay: 150ms;
-}
-
-.duration-75 {
-  transition-duration: 75ms;
-}
-
-.duration-300 {
-  transition-duration: 300ms;
-}
-
-html {
+html{
   scroll-behavior: smooth;
 }
 
-body {
+body{
   margin: 0;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  font-family: Nunito, sans-serif;
   font-size: 1rem;
   line-height: 1.5rem;
   --tw-text-opacity: 1;
   color: rgb(165 165 165 / var(--tw-text-opacity));
 }
 
-h1 {
+main{
+  min-height: 100%;
+}
+
+h1{
   font-size: 4.5rem;
   line-height: 1;
   font-weight: 300;
 }
 
-h2 {
+h2{
   font-size: 3rem;
   line-height: 1;
   --tw-text-opacity: 1;
   color: rgb(179 222 0 / var(--tw-text-opacity));
 }
 
-h1, h2, h3, h4, h5, h6 {
+h3{
+  font-size: 1.5rem;
+  line-height: 2rem;
+  --tw-text-opacity: 1;
+  color: rgb(110 110 110 / var(--tw-text-opacity));
+}
+
+h1, h2, h3, h4, h5, h6{
   margin-bottom: 1.5rem;
 }
 
-a, svg, button {
+a, svg, button{
   margin: 0;
   cursor: pointer;
   text-decoration-line: none;
 }
 
-li, p {
+li, p{
   font-size: 1rem;
   line-height: 1.5rem;
 }
 
-.nav-link {
-  margin-left: 3rem;
-  display: inline;
-  border-bottom-width: 4px;
-  border-color: rgba(0,0,0,0);
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-left: 0;
-  padding-right: 0;
-  font-size: 1rem;
-  line-height: 1.5rem;
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 200ms;
+.container{
+  width: 100%;
 }
 
-.nav-link:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(179 222 0 / var(--tw-border-opacity));
+@media (min-width: 640px){
+  .container{
+    max-width: 640px;
+  }
 }
 
-.sessao {
+@media (min-width: 768px){
+  .container{
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px){
+  .container{
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px){
+  .container{
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px){
+  .container{
+    max-width: 1536px;
+  }
+}
+
+.sessao{
   display: flex;
   width: 100%;
   flex-direction: column;
@@ -1052,25 +660,25 @@ li, p {
   padding-right: 0;
 }
 
-.conteudo {
+.conteudo{
   margin-left: auto;
   margin-right: auto;
   display: grid;
   gap: 4rem;
 }
 
-@media (min-width: 1280px) {
-  .conteudo {
+@media (min-width: 1280px){
+  .conteudo{
     width: 66.666667%;
   }
 }
 
-.coluna {
+.coluna{
   display: flex;
   flex-direction: column;
 }
 
-.btn {
+.btn{
   display: inline-flex;
   align-items: center;
   border-radius: 9999px;
@@ -1089,12 +697,35 @@ li, p {
   transition-duration: 150ms;
 }
 
-.btn:hover {
+.btn:hover{
   padding-left: 2.5rem;
   padding-right: 2.5rem;
 }
 
-.dot {
+.nav-link{
+  margin-left: 3rem;
+  display: inline;
+  border-bottom-width: 4px;
+  border-color: rgba(0,0,0,0);
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0;
+  padding-right: 0;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 200ms;
+}
+
+.nav-link:hover{
+  --tw-border-opacity: 1;
+  border-color: rgb(179 222 0 / var(--tw-border-opacity));
+}
+
+.dot{
   margin-top: 0;
   margin-bottom: 0;
   margin-left: 1rem;
@@ -1111,20 +742,411 @@ li, p {
   transition-duration: 150ms;
 }
 
-.dot:hover {
+.dot:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(179 222 0 / var(--tw-bg-opacity));
 }
 
-.active {
+.fixed{
+  position: fixed;
+}
+
+.absolute{
+  position: absolute;
+}
+
+.relative{
+  position: relative;
+}
+
+.bottom-0{
+  bottom: 0;
+}
+
+.bottom-16{
+  bottom: 4rem;
+}
+
+.left-0{
+  left: 0;
+}
+
+.right-0{
+  right: 0;
+}
+
+.right-16{
+  right: 4rem;
+}
+
+.top-0{
+  top: 0;
+}
+
+.top-1\/2{
+  top: 50%;
+}
+
+.z-10{
+  z-index: 10;
+}
+
+.z-20{
+  z-index: 20;
+}
+
+.z-40{
+  z-index: 40;
+}
+
+.z-50{
+  z-index: 50;
+}
+
+.col-span-1{
+  grid-column: span 1 / span 1;
+}
+
+.col-span-2{
+  grid-column: span 2 / span 2;
+}
+
+.col-span-3{
+  grid-column: span 3 / span 3;
+}
+
+.-m-1{
+  margin: -0.25rem;
+}
+
+.m-0{
+  margin: 0;
+}
+
+.m-auto{
+  margin: auto;
+}
+
+.mb-16{
+  margin-bottom: 4rem;
+}
+
+.mb-2{
+  margin-bottom: 0.5rem;
+}
+
+.mb-4{
+  margin-bottom: 1rem;
+}
+
+.ml-2{
+  margin-left: 0.5rem;
+}
+
+.mt-4{
+  margin-top: 1rem;
+}
+
+.block{
+  display: block;
+}
+
+.flex{
+  display: flex;
+}
+
+.table{
+  display: table;
+}
+
+.grid{
+  display: grid;
+}
+
+.hidden{
+  display: none;
+}
+
+.h-12{
+  height: 3rem;
+}
+
+.h-14{
+  height: 3.5rem;
+}
+
+.h-16{
+  height: 4rem;
+}
+
+.h-160{
+  height: 40rem;
+}
+
+.h-dvh{
+  height: 100dvh;
+}
+
+.h-fit{
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.h-full{
+  height: 100%;
+}
+
+.max-h-dvh{
+  max-height: 100dvh;
+}
+
+.min-h-20{
+  min-height: 5rem;
+}
+
+.w-16{
+  width: 4rem;
+}
+
+.w-4\/5{
+  width: 80%;
+}
+
+.w-auto{
+  width: auto;
+}
+
+.w-fit{
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.w-full{
+  width: 100%;
+}
+
+@keyframes fadeInRight{
+  0%{
+    transform: translateX(100%);
+    opacity: 0;
+  }
+
+  50%{
+    opacity: 0;
+  }
+
+  100%{
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
+
+.animate-fade-in-right{
+  animation: fadeInRight 2s ease-in-out;
+}
+
+.cursor-pointer{
+  cursor: pointer;
+}
+
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-5{
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
+.items-center{
+  align-items: center;
+}
+
+.justify-end{
+  justify-content: flex-end;
+}
+
+.justify-center{
+  justify-content: center;
+}
+
+.gap-y-10{
+  row-gap: 2.5rem;
+}
+
+.overflow-hidden{
+  overflow: hidden;
+}
+
+.rounded-lg{
+  border-radius: 0.5rem;
+}
+
+.rounded-md{
+  border-radius: 0.375rem;
+}
+
+.border-b-2{
+  border-bottom-width: 2px;
+}
+
+.border-branco{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.bg-azul{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 69 160 / var(--tw-bg-opacity));
+}
+
+.bg-cinza{
+  --tw-bg-opacity: 1;
+  background-color: rgb(110 110 110 / var(--tw-bg-opacity));
+}
+
+.bg-cinza-claro-2{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 249 249 / var(--tw-bg-opacity));
+}
+
+.bg-preto{
   --tw-bg-opacity: 1;
   background-color: rgb(37 37 37 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-\[rgba\(0\2c 0\2c 0\2c 0\.8\)\]:hover {
+.bg-gradient-to-b{
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
+.bg-img-banner{
+  background-image: url('../img/agro-e-solar-banner-paineis-solares-3.jpg');
+}
+
+.from-\[rgba\(0\2c 69\2c 160\2c 0\.8\)\]{
+  --tw-gradient-from: rgba(0,69,160,0.8) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgba(0, 69, 160, 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-\[rgba\(0\2c 69\2c 160\2c 0\.1\)\]{
+  --tw-gradient-to: rgba(0,69,160,0.1) var(--tw-gradient-to-position);
+}
+
+.bg-cover{
+  background-size: cover;
+}
+
+.bg-center{
+  background-position: center;
+}
+
+.object-cover{
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.p-4{
+  padding: 1rem;
+}
+
+.px-0{
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.text-center{
+  text-align: center;
+}
+
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.font-bold{
+  font-weight: 700;
+}
+
+.font-extralight{
+  font-weight: 200;
+}
+
+.font-normal{
+  font-weight: 400;
+}
+
+.font-semibold{
+  font-weight: 600;
+}
+
+.leading-4{
+  line-height: 1rem;
+}
+
+.text-branco{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-cinza-claro{
+  --tw-text-opacity: 1;
+  color: rgb(165 165 165 / var(--tw-text-opacity));
+}
+
+.text-verde{
+  --tw-text-opacity: 1;
+  color: rgb(179 222 0 / var(--tw-text-opacity));
+}
+
+.transition-all{
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-75{
+  transition-duration: 75ms;
+}
+
+.active{
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 37 37 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[rgba\(0\2c 0\2c 0\2c 0\.8\)\]:hover{
   background-color: rgba(0,0,0,0.8);
 }
 
-.group:hover .group-hover\:ml-6 {
+.group:hover .group-hover\:ml-6{
   margin-left: 1.5rem;
 }
